src/parser/y.output

state 0
	$accept: .program $end 

	BEGIN  shift 2
	.  error

	program  goto 1

state 1
	$accept:  program.$end 

	$end  accept
	.  error


state 2
	program:  BEGIN.functions statements END 
	functions: .    (3)

	.  reduce 3 (src line 102)

	functions  goto 3

state 3
	program:  BEGIN functions.statements END 
	functions:  functions.function 

	error  shift 19
	BEGIN  shift 18
	SKIP  shift 8
	READ  shift 10
	FREE  shift 11
	RETURN  shift 12
	EXIT  shift 13
	PRINT  shift 14
	PRINTLN  shift 15
	IF  shift 16
	WHILE  shift 17
	FST  shift 31
	SND  shift 32
	INT  shift 26
	BOOL  shift 27
	CHAR  shift 28
	STRING  shift 29
	PAIR  shift 30
	IDENTIFIER  shift 23
	.  error

	function  goto 5
	statement  goto 6
	statements  goto 4
	assignlhs  goto 9
	pairelem  goto 25
	arrayelem  goto 24
	basetype  goto 20
	typeDef  goto 7
	arraytype  goto 21
	pairtype  goto 22

state 4
	program:  BEGIN functions statements.END 
	statements:  statements.SEMICOLON statement 

	END  shift 33
	SEMICOLON  shift 34
	.  error


state 5
	functions:  functions function.    (2)

	.  reduce 2 (src line 101)


state 6
	statements:  statement.    (18)

	.  reduce 18 (src line 133)


state 7
	function:  typeDef.IDENTIFIER OPENROUND CLOSEROUND IS statements END 
	function:  typeDef.IDENTIFIER OPENROUND paramlist CLOSEROUND IS statements END 
	statement:  typeDef.IDENTIFIER ASSIGNMENT assignrhs 
	arraytype:  typeDef.OPENSQUARE CLOSESQUARE 

	OPENSQUARE  shift 36
	IDENTIFIER  shift 35
	.  error


state 8
	statement:  SKIP.    (19)

	.  reduce 19 (src line 136)


state 9
	statement:  assignlhs.ASSIGNMENT assignrhs 

	ASSIGNMENT  shift 37
	.  error


state 10
	statement:  READ.assignlhs 

	FST  shift 31
	SND  shift 32
	IDENTIFIER  shift 23
	.  error

	assignlhs  goto 38
	pairelem  goto 25
	arrayelem  goto 24

state 11
	statement:  FREE.expr 

	NOT  shift 48
	LEN  shift 49
	ORD  shift 50
	CHR  shift 51
	PLUS  shift 53
	SUB  shift 52
	TRUE  shift 41
	FALSE  shift 42
	NULL  shift 55
	OPENROUND  shift 54
	STRINGCONST  shift 44
	IDENTIFIER  shift 46
	INTEGER  shift 40
	CHARACTER  shift 43
	.  error

	expr  goto 39
	arrayelem  goto 47
	pairliter  goto 45

state 12
	statement:  RETURN.expr 

	NOT  shift 48
	LEN  shift 49
	ORD  shift 50
	CHR  shift 51
	PLUS  shift 53
	SUB  shift 52
	TRUE  shift 41
	FALSE  shift 42
	NULL  shift 55
	OPENROUND  shift 54
	STRINGCONST  shift 44
	IDENTIFIER  shift 46
	INTEGER  shift 40
	CHARACTER  shift 43
	.  error

	expr  goto 56
	arrayelem  goto 47
	pairliter  goto 45

state 13
	statement:  EXIT.expr 

	NOT  shift 48
	LEN  shift 49
	ORD  shift 50
	CHR  shift 51
	PLUS  shift 53
	SUB  shift 52
	TRUE  shift 41
	FALSE  shift 42
	NULL  shift 55
	OPENROUND  shift 54
	STRINGCONST  shift 44
	IDENTIFIER  shift 46
	INTEGER  shift 40
	CHARACTER  shift 43
	.  error

	expr  goto 57
	arrayelem  goto 47
	pairliter  goto 45

state 14
	statement:  PRINT.expr 

	NOT  shift 48
	LEN  shift 49
	ORD  shift 50
	CHR  shift 51
	PLUS  shift 53
	SUB  shift 52
	TRUE  shift 41
	FALSE  shift 42
	NULL  shift 55
	OPENROUND  shift 54
	STRINGCONST  shift 44
	IDENTIFIER  shift 46
	INTEGER  shift 40
	CHARACTER  shift 43
	.  error

	expr  goto 58
	arrayelem  goto 47
	pairliter  goto 45

state 15
	statement:  PRINTLN.expr 

	NOT  shift 48
	LEN  shift 49
	ORD  shift 50
	CHR  shift 51
	PLUS  shift 53
	SUB  shift 52
	TRUE  shift 41
	FALSE  shift 42
	NULL  shift 55
	OPENROUND  shift 54
	STRINGCONST  shift 44
	IDENTIFIER  shift 46
	INTEGER  shift 40
	CHARACTER  shift 43
	.  error

	expr  goto 59
	arrayelem  goto 47
	pairliter  goto 45

state 16
	statement:  IF.expr THEN statements ELSE statements FI 

	NOT  shift 48
	LEN  shift 49
	ORD  shift 50
	CHR  shift 51
	PLUS  shift 53
	SUB  shift 52
	TRUE  shift 41
	FALSE  shift 42
	NULL  shift 55
	OPENROUND  shift 54
	STRINGCONST  shift 44
	IDENTIFIER  shift 46
	INTEGER  shift 40
	CHARACTER  shift 43
	.  error

	expr  goto 60
	arrayelem  goto 47
	pairliter  goto 45

state 17
	statement:  WHILE.expr DO statements DONE 

	NOT  shift 48
	LEN  shift 49
	ORD  shift 50
	CHR  shift 51
	PLUS  shift 53
	SUB  shift 52
	TRUE  shift 41
	FALSE  shift 42
	NULL  shift 55
	OPENROUND  shift 54
	STRINGCONST  shift 44
	IDENTIFIER  shift 46
	INTEGER  shift 40
	CHARACTER  shift 43
	.  error

	expr  goto 61
	arrayelem  goto 47
	pairliter  goto 45

state 18
	statement:  BEGIN.statements END 

	error  shift 19
	BEGIN  shift 18
	SKIP  shift 8
	READ  shift 10
	FREE  shift 11
	RETURN  shift 12
	EXIT  shift 13
	PRINT  shift 14
	PRINTLN  shift 15
	IF  shift 16
	WHILE  shift 17
	FST  shift 31
	SND  shift 32
	INT  shift 26
	BOOL  shift 27
	CHAR  shift 28
	STRING  shift 29
	PAIR  shift 30
	IDENTIFIER  shift 23
	.  error

	statement  goto 6
	statements  goto 62
	assignlhs  goto 9
	pairelem  goto 25
	arrayelem  goto 24
	basetype  goto 20
	typeDef  goto 63
	arraytype  goto 21
	pairtype  goto 22

state 19
	statement:  error.SEMICOLON 
	statement:  error.END 
	statement:  error.FI 
	statement:  error.DONE 

	END  shift 65
	FI  shift 66
	DONE  shift 67
	SEMICOLON  shift 64
	.  error


state 20
	typeDef:  basetype.    (77)

	.  reduce 77 (src line 223)


state 21
	typeDef:  arraytype.    (78)

	.  reduce 78 (src line 224)


state 22
	typeDef:  pairtype.    (79)

	.  reduce 79 (src line 225)


state 23
	assignlhs:  IDENTIFIER.    (9)
	arrayelem:  IDENTIFIER.bracketed 

	OPENSQUARE  shift 69
	.  reduce 9 (src line 122)

	bracketed  goto 68

state 24
	assignlhs:  arrayelem.    (10)

	.  reduce 10 (src line 123)


state 25
	assignlhs:  pairelem.    (11)

	.  reduce 11 (src line 124)


state 26
	basetype:  INT.    (80)

	.  reduce 80 (src line 227)


state 27
	basetype:  BOOL.    (81)

	.  reduce 81 (src line 228)


state 28
	basetype:  CHAR.    (82)

	.  reduce 82 (src line 229)


state 29
	basetype:  STRING.    (83)

	.  reduce 83 (src line 230)


state 30
	pairtype:  PAIR.OPENROUND pairelemtype COMMA pairelemtype CLOSEROUND 

	OPENROUND  shift 70
	.  error


state 31
	pairelem:  FST.expr 

	NOT  shift 48
	LEN  shift 49
	ORD  shift 50
	CHR  shift 51
	PLUS  shift 53
	SUB  shift 52
	TRUE  shift 41
	FALSE  shift 42
	NULL  shift 55
	OPENROUND  shift 54
	STRINGCONST  shift 44
	IDENTIFIER  shift 46
	INTEGER  shift 40
	CHARACTER  shift 43
	.  error

	expr  goto 71
	arrayelem  goto 47
	pairliter  goto 45

state 32
	pairelem:  SND.expr 

	NOT  shift 48
	LEN  shift 49
	ORD  shift 50
	CHR  shift 51
	PLUS  shift 53
	SUB  shift 52
	TRUE  shift 41
	FALSE  shift 42
	NULL  shift 55
	OPENROUND  shift 54
	STRINGCONST  shift 44
	IDENTIFIER  shift 46
	INTEGER  shift 40
	CHARACTER  shift 43
	.  error

	expr  goto 72
	arrayelem  goto 47
	pairliter  goto 45

state 33
	program:  BEGIN functions statements END.    (1)

	.  reduce 1 (src line 97)


state 34
	statements:  statements SEMICOLON.statement 

	error  shift 19
	BEGIN  shift 18
	SKIP  shift 8
	READ  shift 10
	FREE  shift 11
	RETURN  shift 12
	EXIT  shift 13
	PRINT  shift 14
	PRINTLN  shift 15
	IF  shift 16
	WHILE  shift 17
	FST  shift 31
	SND  shift 32
	INT  shift 26
	BOOL  shift 27
	CHAR  shift 28
	STRING  shift 29
	PAIR  shift 30
	IDENTIFIER  shift 23
	.  error

	statement  goto 73
	assignlhs  goto 9
	pairelem  goto 25
	arrayelem  goto 24
	basetype  goto 20
	typeDef  goto 63
	arraytype  goto 21
	pairtype  goto 22

state 35
	function:  typeDef IDENTIFIER.OPENROUND CLOSEROUND IS statements END 
	function:  typeDef IDENTIFIER.OPENROUND paramlist CLOSEROUND IS statements END 
	statement:  typeDef IDENTIFIER.ASSIGNMENT assignrhs 

	OPENROUND  shift 74
	ASSIGNMENT  shift 75
	.  error


state 36
	arraytype:  typeDef OPENSQUARE.CLOSESQUARE 

	CLOSESQUARE  shift 76
	.  error


state 37
	statement:  assignlhs ASSIGNMENT.assignrhs 

	NEWPAIR  shift 81
	CALL  shift 82
	FST  shift 31
	SND  shift 32
	NOT  shift 48
	LEN  shift 49
	ORD  shift 50
	CHR  shift 51
	PLUS  shift 53
	SUB  shift 52
	TRUE  shift 41
	FALSE  shift 42
	NULL  shift 55
	OPENSQUARE  shift 83
	OPENROUND  shift 54
	STRINGCONST  shift 44
	IDENTIFIER  shift 46
	INTEGER  shift 40
	CHARACTER  shift 43
	.  error

	assignrhs  goto 77
	expr  goto 78
	pairelem  goto 80
	arrayliter  goto 79
	arrayelem  goto 47
	pairliter  goto 45

state 38
	statement:  READ assignlhs.    (22)

	.  reduce 22 (src line 139)


state 39
	statement:  FREE expr.    (23)
	expr:  expr.PLUS expr 
	expr:  expr.SUB expr 
	expr:  expr.MUL expr 
	expr:  expr.MOD expr 
	expr:  expr.DIV expr 
	expr:  expr.LT expr 
	expr:  expr.GT expr 
	expr:  expr.LTE expr 
	expr:  expr.GTE expr 
	expr:  expr.EQ expr 
	expr:  expr.NEQ expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 

	MUL  shift 86
	DIV  shift 88
	MOD  shift 87
	PLUS  shift 84
	SUB  shift 85
	AND  shift 95
	OR  shift 96
	GT  shift 90
	GTE  shift 92
	LT  shift 89
	LTE  shift 91
	EQ  shift 93
	NEQ  shift 94
	.  reduce 23 (src line 140)


state 40
	expr:  INTEGER.    (35)

	.  reduce 35 (src line 164)


state 41
	expr:  TRUE.    (36)

	.  reduce 36 (src line 166)


state 42
	expr:  FALSE.    (37)

	.  reduce 37 (src line 167)


state 43
	expr:  CHARACTER.    (38)

	.  reduce 38 (src line 169)


state 44
	expr:  STRINGCONST.    (39)

	.  reduce 39 (src line 170)


state 45
	expr:  pairliter.    (40)

	.  reduce 40 (src line 171)


state 46
	expr:  IDENTIFIER.    (41)
	arrayelem:  IDENTIFIER.bracketed 

	OPENSQUARE  shift 69
	.  reduce 41 (src line 172)

	bracketed  goto 68

state 47
	expr:  arrayelem.    (42)

	.  reduce 42 (src line 173)


state 48
	expr:  NOT.expr 

	NOT  shift 48
	LEN  shift 49
	ORD  shift 50
	CHR  shift 51
	PLUS  shift 53
	SUB  shift 52
	TRUE  shift 41
	FALSE  shift 42
	NULL  shift 55
	OPENROUND  shift 54
	STRINGCONST  shift 44
	IDENTIFIER  shift 46
	INTEGER  shift 40
	CHARACTER  shift 43
	.  error

	expr  goto 97
	arrayelem  goto 47
	pairliter  goto 45

state 49
	expr:  LEN.expr 

	NOT  shift 48
	LEN  shift 49
	ORD  shift 50
	CHR  shift 51
	PLUS  shift 53
	SUB  shift 52
	TRUE  shift 41
	FALSE  shift 42
	NULL  shift 55
	OPENROUND  shift 54
	STRINGCONST  shift 44
	IDENTIFIER  shift 46
	INTEGER  shift 40
	CHARACTER  shift 43
	.  error

	expr  goto 98
	arrayelem  goto 47
	pairliter  goto 45

state 50
	expr:  ORD.expr 

	NOT  shift 48
	LEN  shift 49
	ORD  shift 50
	CHR  shift 51
	PLUS  shift 53
	SUB  shift 52
	TRUE  shift 41
	FALSE  shift 42
	NULL  shift 55
	OPENROUND  shift 54
	STRINGCONST  shift 44
	IDENTIFIER  shift 46
	INTEGER  shift 40
	CHARACTER  shift 43
	.  error

	expr  goto 99
	arrayelem  goto 47
	pairliter  goto 45

state 51
	expr:  CHR.expr 

	NOT  shift 48
	LEN  shift 49
	ORD  shift 50
	CHR  shift 51
	PLUS  shift 53
	SUB  shift 52
	TRUE  shift 41
	FALSE  shift 42
	NULL  shift 55
	OPENROUND  shift 54
	STRINGCONST  shift 44
	IDENTIFIER  shift 46
	INTEGER  shift 40
	CHARACTER  shift 43
	.  error

	expr  goto 100
	arrayelem  goto 47
	pairliter  goto 45

state 52
	expr:  SUB.expr 

	NOT  shift 48
	LEN  shift 49
	ORD  shift 50
	CHR  shift 51
	PLUS  shift 53
	SUB  shift 52
	TRUE  shift 41
	FALSE  shift 42
	NULL  shift 55
	OPENROUND  shift 54
	STRINGCONST  shift 44
	IDENTIFIER  shift 46
	INTEGER  shift 40
	CHARACTER  shift 43
	.  error

	expr  goto 101
	arrayelem  goto 47
	pairliter  goto 45

state 53
	expr:  PLUS.expr 

	NOT  shift 48
	LEN  shift 49
	ORD  shift 50
	CHR  shift 51
	PLUS  shift 53
	SUB  shift 52
	TRUE  shift 41
	FALSE  shift 42
	NULL  shift 55
	OPENROUND  shift 54
	STRINGCONST  shift 44
	IDENTIFIER  shift 46
	INTEGER  shift 40
	CHARACTER  shift 43
	.  error

	expr  goto 102
	arrayelem  goto 47
	pairliter  goto 45

state 54
	expr:  OPENROUND.expr CLOSEROUND 

	NOT  shift 48
	LEN  shift 49
	ORD  shift 50
	CHR  shift 51
	PLUS  shift 53
	SUB  shift 52
	TRUE  shift 41
	FALSE  shift 42
	NULL  shift 55
	OPENROUND  shift 54
	STRINGCONST  shift 44
	IDENTIFIER  shift 46
	INTEGER  shift 40
	CHARACTER  shift 43
	.  error

	expr  goto 103
	arrayelem  goto 47
	pairliter  goto 45

state 55
	pairliter:  NULL.    (70)

	.  reduce 70 (src line 211)


state 56
	statement:  RETURN expr.    (24)
	expr:  expr.PLUS expr 
	expr:  expr.SUB expr 
	expr:  expr.MUL expr 
	expr:  expr.MOD expr 
	expr:  expr.DIV expr 
	expr:  expr.LT expr 
	expr:  expr.GT expr 
	expr:  expr.LTE expr 
	expr:  expr.GTE expr 
	expr:  expr.EQ expr 
	expr:  expr.NEQ expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 

	MUL  shift 86
	DIV  shift 88
	MOD  shift 87
	PLUS  shift 84
	SUB  shift 85
	AND  shift 95
	OR  shift 96
	GT  shift 90
	GTE  shift 92
	LT  shift 89
	LTE  shift 91
	EQ  shift 93
	NEQ  shift 94
	.  reduce 24 (src line 141)


state 57
	statement:  EXIT expr.    (25)
	expr:  expr.PLUS expr 
	expr:  expr.SUB expr 
	expr:  expr.MUL expr 
	expr:  expr.MOD expr 
	expr:  expr.DIV expr 
	expr:  expr.LT expr 
	expr:  expr.GT expr 
	expr:  expr.LTE expr 
	expr:  expr.GTE expr 
	expr:  expr.EQ expr 
	expr:  expr.NEQ expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 

	MUL  shift 86
	DIV  shift 88
	MOD  shift 87
	PLUS  shift 84
	SUB  shift 85
	AND  shift 95
	OR  shift 96
	GT  shift 90
	GTE  shift 92
	LT  shift 89
	LTE  shift 91
	EQ  shift 93
	NEQ  shift 94
	.  reduce 25 (src line 142)


state 58
	statement:  PRINT expr.    (26)
	expr:  expr.PLUS expr 
	expr:  expr.SUB expr 
	expr:  expr.MUL expr 
	expr:  expr.MOD expr 
	expr:  expr.DIV expr 
	expr:  expr.LT expr 
	expr:  expr.GT expr 
	expr:  expr.LTE expr 
	expr:  expr.GTE expr 
	expr:  expr.EQ expr 
	expr:  expr.NEQ expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 

	MUL  shift 86
	DIV  shift 88
	MOD  shift 87
	PLUS  shift 84
	SUB  shift 85
	AND  shift 95
	OR  shift 96
	GT  shift 90
	GTE  shift 92
	LT  shift 89
	LTE  shift 91
	EQ  shift 93
	NEQ  shift 94
	.  reduce 26 (src line 143)


state 59
	statement:  PRINTLN expr.    (27)
	expr:  expr.PLUS expr 
	expr:  expr.SUB expr 
	expr:  expr.MUL expr 
	expr:  expr.MOD expr 
	expr:  expr.DIV expr 
	expr:  expr.LT expr 
	expr:  expr.GT expr 
	expr:  expr.LTE expr 
	expr:  expr.GTE expr 
	expr:  expr.EQ expr 
	expr:  expr.NEQ expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 

	MUL  shift 86
	DIV  shift 88
	MOD  shift 87
	PLUS  shift 84
	SUB  shift 85
	AND  shift 95
	OR  shift 96
	GT  shift 90
	GTE  shift 92
	LT  shift 89
	LTE  shift 91
	EQ  shift 93
	NEQ  shift 94
	.  reduce 27 (src line 144)


state 60
	statement:  IF expr.THEN statements ELSE statements FI 
	expr:  expr.PLUS expr 
	expr:  expr.SUB expr 
	expr:  expr.MUL expr 
	expr:  expr.MOD expr 
	expr:  expr.DIV expr 
	expr:  expr.LT expr 
	expr:  expr.GT expr 
	expr:  expr.LTE expr 
	expr:  expr.GTE expr 
	expr:  expr.EQ expr 
	expr:  expr.NEQ expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 

	THEN  shift 104
	MUL  shift 86
	DIV  shift 88
	MOD  shift 87
	PLUS  shift 84
	SUB  shift 85
	AND  shift 95
	OR  shift 96
	GT  shift 90
	GTE  shift 92
	LT  shift 89
	LTE  shift 91
	EQ  shift 93
	NEQ  shift 94
	.  error


state 61
	statement:  WHILE expr.DO statements DONE 
	expr:  expr.PLUS expr 
	expr:  expr.SUB expr 
	expr:  expr.MUL expr 
	expr:  expr.MOD expr 
	expr:  expr.DIV expr 
	expr:  expr.LT expr 
	expr:  expr.GT expr 
	expr:  expr.LTE expr 
	expr:  expr.GTE expr 
	expr:  expr.EQ expr 
	expr:  expr.NEQ expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 

	DO  shift 105
	MUL  shift 86
	DIV  shift 88
	MOD  shift 87
	PLUS  shift 84
	SUB  shift 85
	AND  shift 95
	OR  shift 96
	GT  shift 90
	GTE  shift 92
	LT  shift 89
	LTE  shift 91
	EQ  shift 93
	NEQ  shift 94
	.  error


state 62
	statements:  statements.SEMICOLON statement 
	statement:  BEGIN statements.END 

	END  shift 106
	SEMICOLON  shift 34
	.  error


state 63
	statement:  typeDef.IDENTIFIER ASSIGNMENT assignrhs 
	arraytype:  typeDef.OPENSQUARE CLOSESQUARE 

	OPENSQUARE  shift 36
	IDENTIFIER  shift 107
	.  error


state 64
	statement:  error SEMICOLON.    (31)

	.  reduce 31 (src line 148)


state 65
	statement:  error END.    (32)

	.  reduce 32 (src line 152)


state 66
	statement:  error FI.    (33)

	.  reduce 33 (src line 155)


state 67
	statement:  error DONE.    (34)

	.  reduce 34 (src line 159)


state 68
	arrayelem:  IDENTIFIER bracketed.    (67)
	bracketed:  bracketed.OPENSQUARE expr CLOSESQUARE 

	OPENSQUARE  shift 108
	.  reduce 67 (src line 205)


state 69
	bracketed:  OPENSQUARE.expr CLOSESQUARE 

	NOT  shift 48
	LEN  shift 49
	ORD  shift 50
	CHR  shift 51
	PLUS  shift 53
	SUB  shift 52
	TRUE  shift 41
	FALSE  shift 42
	NULL  shift 55
	OPENROUND  shift 54
	STRINGCONST  shift 44
	IDENTIFIER  shift 46
	INTEGER  shift 40
	CHARACTER  shift 43
	.  error

	expr  goto 109
	arrayelem  goto 47
	pairliter  goto 45

state 70
	pairtype:  PAIR OPENROUND.pairelemtype COMMA pairelemtype CLOSEROUND 

	INT  shift 26
	BOOL  shift 27
	CHAR  shift 28
	STRING  shift 29
	PAIR  shift 113
	.  error

	basetype  goto 111
	typeDef  goto 114
	arraytype  goto 112
	pairtype  goto 22
	pairelemtype  goto 110

state 71
	expr:  expr.PLUS expr 
	expr:  expr.SUB expr 
	expr:  expr.MUL expr 
	expr:  expr.MOD expr 
	expr:  expr.DIV expr 
	expr:  expr.LT expr 
	expr:  expr.GT expr 
	expr:  expr.LTE expr 
	expr:  expr.GTE expr 
	expr:  expr.EQ expr 
	expr:  expr.NEQ expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	pairelem:  FST expr.    (71)

	MUL  shift 86
	DIV  shift 88
	MOD  shift 87
	PLUS  shift 84
	SUB  shift 85
	AND  shift 95
	OR  shift 96
	GT  shift 90
	GTE  shift 92
	LT  shift 89
	LTE  shift 91
	EQ  shift 93
	NEQ  shift 94
	.  reduce 71 (src line 214)


state 72
	expr:  expr.PLUS expr 
	expr:  expr.SUB expr 
	expr:  expr.MUL expr 
	expr:  expr.MOD expr 
	expr:  expr.DIV expr 
	expr:  expr.LT expr 
	expr:  expr.GT expr 
	expr:  expr.LTE expr 
	expr:  expr.GTE expr 
	expr:  expr.EQ expr 
	expr:  expr.NEQ expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	pairelem:  SND expr.    (72)

	MUL  shift 86
	DIV  shift 88
	MOD  shift 87
	PLUS  shift 84
	SUB  shift 85
	AND  shift 95
	OR  shift 96
	GT  shift 90
	GTE  shift 92
	LT  shift 89
	LTE  shift 91
	EQ  shift 93
	NEQ  shift 94
	.  reduce 72 (src line 215)


state 73
	statements:  statements SEMICOLON statement.    (17)

	.  reduce 17 (src line 132)


state 74
	function:  typeDef IDENTIFIER OPENROUND.CLOSEROUND IS statements END 
	function:  typeDef IDENTIFIER OPENROUND.paramlist CLOSEROUND IS statements END 

	INT  shift 26
	BOOL  shift 27
	CHAR  shift 28
	STRING  shift 29
	PAIR  shift 30
	CLOSEROUND  shift 115
	.  error

	paramlist  goto 116
	param  goto 117
	basetype  goto 20
	typeDef  goto 118
	arraytype  goto 21
	pairtype  goto 22

state 75
	statement:  typeDef IDENTIFIER ASSIGNMENT.assignrhs 
